--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
 }
 
 .avatar img {
-    width: 150px;
-    height: 150px;
+    width: 400px;
+    height: 400px;
     border: 5px solid #ff0000;
 }
 
@@ -65,7 +65,6 @@ h1 {
     height: 100%;
     overflow: hidden;
     z-index: -1;
-    /* Ensure video stays behind content */
 }
 
 #bg-video {
@@ -78,4 +77,32 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     background-size: cover;
+}
+
+.mute {
+    width: 50px;
+    height: 50px;
+    transition: all 0.5s ease-in-out;
+}
+
+.unmute {
+    width: 50px;
+    height: 50px;
+    transition: all 0.5s ease-in-out;
+}
+
+
+.mute,
+.unmute {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+}
+
+#muteButton {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 50px;
+    height: 50px;
 }
