--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,32 @@ body {
 }
 
 h1 {
-    color: #ff0000;
+    color: #CD5C3A;
+    font-family: 'Verdana';
+    font-size: 34px;
+    font-weight: bold;
+    font-style: italic;
 }
 
 .bio {
-    font-size: 1.3em;
     margin: 32px 0;
+    font-family: 'Verdana';
+    font-size: 19px;
+    font-weight: bold;
+    font-style: italic;
 }
 
+
+.Insta {
+    width: 50px;
+    height: 50px;
+    transition: all 0.5s ease-in-out;
+}
+
+.Insta:hover {
+    opacity: 0.7;
+    transform: scale(1.2);
+}
 
 .twitch {
     width: 50px;
