--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ body {
 .avatar img {
     width: 240px;
     height: 240px;
-    border: 5px solid #ff0000;
-    filter: grayscale(100%);
+    border: 5px solid #CD5C3A;
+    filter: grayscale(40%);
 }
 
 h1 {
@@ -25,10 +25,10 @@ h1 {
 
 .bio {
     margin: 32px 0;
-    font-family: 'Verdana';
-    font-size: 19px;
+    color: #CD5C3A;
+    font-family: 'Arial', sans-serif;
+    font-size: 20px;
     font-weight: bold;
-    font-style: italic;
 }
 
 
