--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,9 @@ h1 {
 
 #muteButton {
     transition: all 0.5s ease-in-out;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
