--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,36 @@
 body {
-    background-color: #000000;
+    background-color: #000;
     color: #fff;
     font-family: 'Arial', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    margin: 0;
+}
+
+.ml-2 {
+    margin-left: 16px;
+}
+
+.text-decoration-none {
+    text-decoration: none;
+}
+
+.mt-3 {
+    margin-top: 12px;
+}
+
+.mt-4 {
+    margin-top: 16px;
+}
+
+.rounded-circle {
+    border-radius: 50%;
+}
+
+.text-center {
+    text-align: center;
 }
 
 .avatar img {
@@ -24,7 +49,7 @@ h1 {
 }
 
 .bio {
-    margin: 32px 0;
+    margin: 32px 16px;
     color: #ffc595;
     font-family: 'fantasy';
     font-size: 24px;
@@ -32,49 +57,35 @@ h1 {
     font-style: italic;
 }
 
+@media screen and (max-width: 768px) {
+    .avatar img {
+        width: 180px;
+        height: 180px;
+    }
+    h1 {
+        font-size: 24px;
+    }
+    .bio {
+        font-size: 18px;
+        /* width: 80%; */
+    }
+}
 
-.Insta {
+.social-icons img {
     width: 50px;
     height: 50px;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
-.Insta:hover {
-    opacity: 0.7;
-    transform: scale(1.2);
-}
-
-.twitch {
-    width: 50px;
-    height: 50px;
-    transition: all 0.5s ease-in-out;
-}
-
-.twitch:hover {
-    opacity: 0.7;
-    transform: scale(1.2);
-}
-
-.discord {
-    width: 50px;
-    height: 50px;
-    transition: all 0.5s ease-in-out;
-}
-
-.discord:hover {
-    opacity: 0.7;
-    transform: scale(1.2);
+.social-icons img:hover {
+    opacity: 0.6;
+    transform: scale(.9);
 }
 
 .steam {
-    width: 65px;
-    height: 65px;
-    transition: all 0.5s ease-in-out;
-}
-
-.steam:hover {
-    opacity: 0.7;
-    transform: scale(1.2);
+    width: 65px!important;
+    height: 65px!important;
+    margin-left: 8px;
 }
 
 .video-background {
@@ -99,28 +110,6 @@ h1 {
     background-size: cover;
 }
 
-.mute {
-    width: 50px;
-    height: 50px;
-    transition: all 0.5s ease-in-out;
-}
-
-.unmute {
-    width: 50px;
-    height: 50px;
-    transition: all 0.5s ease-in-out;
-}
-
-
-.mute,
-.unmute {
-    position: absolute;
-}
-
-.mute {
-    display: none;
-}
-
 #muteButton {
     transition: all 0.5s ease-in-out;
     position: absolute;
@@ -142,18 +131,30 @@ h1 {
     transform: scale(1.2);
 }
 
+.mute,
+.unmute {
+    width: 50px;
+    height: 50px;
+    transition: all 0.5s ease-in-out;
+    position: absolute;
+}
+
+.unmute {
+    display: none;
+}
+
 .social-icons {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.containerr {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: rgba(000, 000, 000, .7);
+    background: rgba(0, 0, 0, 0.7);
     width: 100vw;
     height: 100vh;
     margin: 0;
