--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ h1 {
     font-size: 24px;
     font-weight: bold;
     font-style: italic;
+    line-height: 32px;
 }
 
 @media screen and (max-width: 768px) {
