--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #000;
+    /* background-color: #000; */
     color: #fff;
     font-family: 'Arial', sans-serif;
     display: flex;
@@ -29,13 +29,38 @@ body {
     text-align: center;
 }
 
+.avatar {
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .avatar img {
-    width: 240px;
-    height: 240px;
-    border: 5px solid #ffc595;
+    width: 230px;
+    height: 230px;
     filter: grayscale(40%);
     user-select: none;
     pointer-events: none;
+}
+
+.analyzer-container {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    background-color: transparent;
+}
+
+#analyzer {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    background-color: transparent;
 }
 
 h1 {
@@ -57,9 +82,13 @@ h1 {
 }
 
 @media screen and (max-width: 768px) {
+    .analyzer-container {
+        height: 200px;
+    }
+
     .avatar img {
-        width: 180px;
-        height: 180px;
+        width: 120px;
+        height: 120px;
     }
     h1 {
         font-size: 24px;
