--- a/styles.css
+++ b/styles.css
@@ -194,3 +194,27 @@ h1 {
     height: 100vh;
     margin: 0;
 }
+
+
+#bg-video {
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.video-background::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('img/Avatar.jpg') center center no-repeat;
+    background-size: cover;
+    opacity: 1;
+    transition: opacity 1s;
+}
+
+.video-background.loaded::before {
+    opacity: 0;
+}
+
