--- a/styles.css
+++ b/styles.css
@@ -91,9 +91,11 @@ h1 {
         width: 120px;
         height: 120px;
     }
+
     h1 {
         font-size: 24px;
     }
+
     .bio {
         font-size: 18px;
     }
@@ -123,8 +125,8 @@ h1 {
 }
 
 .steam {
-    width: 65px!important;
-    height: 65px!important;
+    width: 65px !important;
+    height: 65px !important;
     margin-left: 8px;
 }
 
@@ -218,3 +220,20 @@ h1 {
     opacity: 0;
 }
 
+.toptxt {
+    position: absolute;
+    top: 25px;
+    left: 13%;
+    transform: translateX(-50%);
+    text-align: center;
+    width: 100%;
+}
+
+.pss {
+    position: absolute;
+    top: 100px;
+    left: 13%;
+    transform: translateX(-50%);
+    text-align: center;
+    width: 13%;
+}
